파톺2 복습 추가

--- a/1_파이썬_문법_기초/1_변수와_기본_데이터타입.ipynb
+++ b/1_파이썬_문법_기초/1_변수와_기본_데이터타입.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 변수와 기본 데이터타입\n",
+    "# 변수(Variable와 기본 데이터타입(Data types)\n",
     "1. [변수란?](#1)\n",
     "2. [변수 이름 규칙](#2)\n",
     "3. [숫자 (Numbers)](#3)\n",
@@ -70,8 +70,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4321315456\n",
-      "4321315456\n"
+      "4341873280\n",
+      "4341873280\n"
      ]
     }
    ],
@@ -97,8 +97,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4321315456\n",
-      "4321315456\n"
+      "4341873280\n",
+      "4341873280\n"
      ]
     }
    ],
@@ -124,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4321315776\n",
-      "4321315776\n"
+      "4341873600\n",
+      "4341873600\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "4321315456\n"
+      "4341873280\n"
      ]
     }
    ],
@@ -176,14 +176,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1, 2, 3, 4, 5, 6, 7)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7\n"
+     ]
     }
    ],
    "source": [
@@ -194,7 +191,7 @@
     "_a = 5\n",
     "b_ = 6\n",
     "c_1 = 7\n",
-    "a, A, a1, a2, _a, b_, c_1"
+    "print(a, A, a1, a2, _a, b_, c_1)"
    ]
   },
   {
@@ -260,9 +257,9 @@
    "source": [
     "---\n",
     "## 3. 숫자 (Numbers)<a name='3'></a>\n",
-    "- <b>정수형</b>: int\n",
-    "- <b>실수형</b>: float\n",
-    "- <b>복소수형</b>: complex number"
+    "- <b>정수형</b>: `int`\n",
+    "- <b>실수형</b>: `float`\n",
+    "- <b>복소수형</b>: `complex` number"
    ]
   },
   {
@@ -339,8 +336,36 @@
    "source": [
     "---\n",
     "## 4. 문자열 (String)<a name='4'></a>\n",
-    "문자, 단어 등으로 구성된 문자들의 집합\n",
+    "문자, 단어 등으로 구성된 문자들의 집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140526308718192 140526308718192\n",
+      "140526308718192 140526308719664\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'Hello'\n",
+    "b = a\n",
+    "print(id(a), id(b))\n",
     "\n",
+    "b += 'World'\n",
+    "print(id(a), id(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 문자열을 만드는 방법 4가지 방법\n",
     " 1. 큰 따옴표로 둘러싸기 (ex. \"Hello World\")\n",
     " 2. 작은 따옴표로 둘러싸기 (ex. 'Hello World')\n",
@@ -350,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +542,7 @@
        "(True, False, True, False)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +574,7 @@
        "(10, 10)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +623,7 @@
        "float"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +644,7 @@
        "int"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +693,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-cf895e436a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Hello World'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-cf895e436a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Hello World'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'Hello World'"
      ]
     }
