--- a/1_파이썬_문법_기초/4_함수.ipynb
+++ b/1_파이썬_문법_기초/4_함수.ipynb
@@ -13,7 +13,10 @@
     "6. [내장 함수(built-in functions)](#6)\n",
     "\n",
     "## 1. 함수란?<a name='#1'></a>\n",
-    "특정 동작을 손쉽게 재사용할 수 있도록 구성한 코드 형태"
+    "특정 동작을 손쉽게 재사용할 수 있도록 구성한 코드 형태\n",
+    "- 인풋을 넣으면 안에서 어떤 작업을 한 뒤 결과값을 아웃풋(리턴값)으로 나오게 하는 것!\n",
+    "- 인풋이 있을 수도 있고 없을 수도 있으며, 아웃풋도 있을 수도 있고 없을 수도 있음\n",
+    "- 인풋이나 아웃풋이 없더라도 함음 내에서 어떤 작업을 하게 할 수 있음"
    ]
   },
   {
@@ -93,6 +96,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 함수의 인풋과 아웃풋(리턴값)이 모두 있는 예시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a+b\n",
+    "\n",
+    "add(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 함수의 인풋과 아웃풋(리턴값)이 모두 없는 예시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!! (0)\n",
+      "Hello!! (1)\n",
+      "Hello!! (2)\n",
+      "Hello!! (3)\n",
+      "Hello!! (4)\n",
+      "Hello!! (5)\n",
+      "Hello!! (6)\n",
+      "Hello!! (7)\n",
+      "Hello!! (8)\n",
+      "Hello!! (9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello_10_times():\n",
+    "    for i in range(10):\n",
+    "        print('Hello!! ({})'.format(i))\n",
+    "\n",
+    "hello_10_times()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## 2. 파이썬 함수의 구조<a name = '2'></a>\n",
     "```python\n",
@@ -113,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
