--- a/1_파이썬_문법_기초/2_리스트.ipynb
+++ b/1_파이썬_문법_기초/2_리스트.ipynb
@@ -8,7 +8,7 @@
     "1. [리스트란?](#1)\n",
     "2. [인덱싱과 슬라이싱](#2)\n",
     "3. [리스트 합치기, 길이 구하기](#3)\n",
-    "4. [수정과 삭제](#4)\n",
+    "4. [수정, 추가, 삭제](#4)\n",
     "\n",
     "## 1. 리스트란?<a name='1'></a>\n",
     "다른 값(or 여러 값)들을 덩어리로 묶는데 사용되는 데이터타입"
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 4. 수정과 삭제<a name='4'></a>\n",
+    "## 4. 수정, 추가, 삭제<a name='4'></a>\n",
     "### 수정\n",
     "리스트는 변경 가능한 타입(mutable type)이므로 수정이 가능"
    ]
@@ -217,8 +217,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 삭제\n",
-    "#### 1) 내장함수 `del` 사용"
+    "### 추가\n",
+    "#### 내장함수 `append` 사용"
    ]
   },
   {
@@ -227,17 +227,50 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140726132843136\n",
+      "[1, 2, 3, 4] [1, 2, 3, 4]\n",
+      "140726132843136 140726132843136\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "print(id(a))\n",
+    "b = a\n",
+    "b.append(4)\n",
+    "print(a, b)\n",
+    "print(id(a), id(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 삭제\n",
+    "#### 1) 내장함수 `del` 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "[1, 2, 4, 5]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "a = [1, 2, 3, 4, 5]\n",
     "del a[2]\n",
     "a"
    ]
@@ -253,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +295,7 @@
        "[1, 2, 3, 2, 4, 2]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +316,7 @@
        "[1, 3, 2, 4, 2]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,8 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -304,7 +339,7 @@
        "[1, 3, 4, 2]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
