--- a/04_리스트_상세.ipynb
+++ b/04_리스트_상세.ipynb
@@ -8,7 +8,9 @@
     "1. [추가(append)](#1)\n",
     "2. [삽입(insert)](#2)\n",
     "3. [정렬(sort)](#3)\n",
-    "4. [리스트로 구현하는 자료구조](#4) (Stack & Queue feat. pop() & popleft()"
+    "4. [리스트로 구현하는 자료구조](#4) (Stack & Queue feat. pop() & popleft()\n",
+    " 1. [Stack](#4-1)\n",
+    " 2. [Queue](#4-2)"
    ]
   },
   {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,14 +109,14 @@
     "---\n",
     "## 4. 리스트로 구현하는 자료구조<a name=\"4\"></a><br>(Stack & Queue feat. `pop()` & `popleft()`)\n",
     "\n",
-    "### (1) Stack(스택)\n",
+    "### (1) Stack(스택)<a name=\"4-1\"></a>\n",
     "- FILO(First In, Last Out 구조): 가장 처음 들어간 건 가장 나중에 나올 수 있는 구조\n",
     "- 리스트의 `append()`와 `pop()` 함수를 사용하면 스택 구조를 구현 가능"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (2) Queue(큐)\n",
+    "### (2) Queue(큐)<a name=\"4-2\"></a>\n",
     "- FIFO(First In, First Out 구조): 맨 처음 들어간 것이 가장 처음 나오는 구조\n",
     "- 리스트의 `insert()`와 `pop()` 함수로 큐 형태를 구현 가능\n",
     " - 하지만 이 방식은 `append()`와 `pop()`으로 스택을 만드는 구조와 달리 느리게 동작하므로, 이럴 때에는 파이썬에서 준비해둔 모듈을 사용해 구현하면 된다.\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,13 @@
      "output_type": "stream",
      "text": [
       "deque([1, 2, 3])\n",
-      "------------------------------\n"
+      "------------------------------\n",
+      "deque([1])\n",
+      "deque([1, 2])\n",
+      "deque([1, 2, 3])\n",
+      "deque([2, 3])\n",
+      "deque([3])\n",
+      "deque([])\n"
      ]
     }
    ],
@@ -177,15 +185,15 @@
     "print(\"-\"*30)\n",
     "\n",
     "queue = deque([])\n",
-    "queue.append(1)"
+    "\n",
+    "for i in range(1, 4):\n",
+    "    queue.append(i)\n",
+    "    print(queue)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    queue.popleft()\n",
+    "    print(queue)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
