문법심화 폴더 생성

--- a/04_파이썬_문법_심화/02_컬렉션.ipynb
+++ b/04_파이썬_문법_심화/02_컬렉션.ipynb
@@ -35,7 +35,7 @@
     "## 2. 리스트(List)<a name=\"2\"></a>\n",
     "- 리스트도 컬렉션 중에 하나이나, 사용빈도가 다른 것들에 비해 많아 다른 문서로 다룸\n",
     "- [리스트 기초](https://github.com/heekyjung/studypolio-python/blob/main/01_파이썬_문법_기초/02_리스트.ipynb)\n",
-    "- [리스트 상세](https://github.com/heekyjung/studypolio-python/blob/main/04_리스트_상세.ipynb)"
+    "- [리스트 상세](https://github.com/heekyjung/studypolio-python/blob/main/04_파이썬_문법_심화/01_리스트_상세.ipynb)"
    ]
   },
   {
