문자열, 함수 되돌아보기

--- a/03_함수_가지고_놀기.ipynb
+++ b/03_함수_가지고_놀기.ipynb
@@ -9,7 +9,8 @@
     "2. [함수의 호출](#2)\n",
     "3. [Jupyter Notebook](#3)\n",
     "4. [여러 개의 인풋과 아웃풋이 있는 함수](#4)\n",
-    "5. [함수 인풋(매개변수)에 기본값 설정하기](#5)"
+    "5. [함수 인풋(매개변수)에 기본값 설정하기](#5)\n",
+    "6. [함수 설명 적기](#6)"
    ]
   },
   {
@@ -199,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,6 +218,105 @@
     "    return add(a, b), mul(a, b)\n",
     "\n",
     "print(add_and_mul(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 6. 함수 설명 적기<a name=\"6\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['APPLE', 'BANANA', 'CAKE', 'DONUT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Apple, Banana, Cake, Donut\"\n",
+    "b = a.split(\",\")\n",
+    "\n",
+    "c = [c.strip().upper() for c in b] # List Comprehension\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def strip_and_upper(string_list): # 함수 형태로 표현\n",
+    "    \"\"\"\n",
+    "    문자열 리스트 안의 모든 원소들의 공백을 제거하고 대문자로 변환하는 함수\n",
+    "    \"\"\"\n",
+    "    result = []\n",
+    "    for string in string_list:\n",
+    "        result += [string.strip().upper()]\n",
+    "        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\"\"\"\n",
+    "주석이기도 하지만,\n",
+    "함수가 시작하는 부분에 작성하면 내장함수 help()를 통해 나타나는 함수의 설명이 됨\n",
+    "\"\"\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function strip_and_upper in module __main__:\n",
+      "\n",
+      "strip_and_upper(string_list)\n",
+      "    문자열 리스트 안의 모든 원소들의 공백을 제거하고 대문자로 변환하는 함수\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(strip_and_upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLE', 'BANANA', 'CAKE', 'DONUT']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strip_and_upper(b)"
    ]
   }
  ],
