--- a/04_파이썬_문법_심화/01_리스트_상세.ipynb
+++ b/04_파이썬_문법_심화/01_리스트_상세.ipynb
@@ -10,7 +10,8 @@
     "3. [정렬(sort)](#3)\n",
     "4. [리스트로 구현하는 자료구조](#4) (Stack & Queue feat. pop() & popleft()\n",
     " 1. [Stack](#4-1)\n",
-    " 2. [Queue](#4-2)"
+    " 2. [Queue](#4-2)\n",
+    "5. [List Comprehension](#5)"
    ]
   },
   {
@@ -193,6 +194,41 @@
     "for i in range(3):\n",
     "    queue.popleft()\n",
     "    print(queue)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 5. List Comprehension<a name=\"5\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['APPLE', 'BANANA', 'CAKE', 'DONUT']\n",
+      "['APPLE', 'BANANA', 'CAKE', 'DONUT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'Apple, Banana, Cake, Donut'\n",
+    "b = a.split(',')\n",
+    "\n",
+    "c = [c.strip().upper() for c in b] # List Comprehension\n",
+    "print(c)\n",
+    "\n",
+    "temp_list = []\n",
+    "for c in b: # 일반적인 for loop 형태\n",
+    "    temp_list += [c.strip().upper()]\n",
+    "print(temp_list)"
    ]
   }
  ],
