--- a/04_파이썬_문법_심화/02_컬렉션.ipynb
+++ b/04_파이썬_문법_심화/02_컬렉션.ipynb
@@ -5,34 +5,27 @@
    "metadata": {},
    "source": [
     "# 컬렉션(Collections)\n",
-    "1. [컬렉션(Collections)](#1)\n",
-    "2. [리스트(List)](#2)\n",
-    "3. [튜플(Tuple)](#3)\n",
-    "4. [딕셔너리(Dictionary)](#4)\n",
-    " 1. [딕셔너리 생성](#4-1)\n",
-    " 2. [딕셔너리 키(Key)](#4-2)\n",
-    " 3. [딕셔너리 값](#4-3)\n",
-    "5. [셋(Set)](#5)\n",
-    " 1. [셋의 특징](#5-1)\n",
-    " 2. [셋으로 중복 제거하기](#5-2)\n",
-    " 3. [교집합, 합집합, 차집합 구하기](#5-3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. 컬렉션(Collections)<a name=\"1\"></a>\n",
     "- 파이썬의 컨데이너 데이터 타입\n",
-    "- 여러 종류가 있으며, 일반적으로 많이 사용되는 <b>리스트, 튜플, 딕셔너리, 셋</b> 등은 built-in 형태여서 다른 모듈을 추가하지 않고도 사용 가능함"
+    "- 여러 종류가 있으며, 일반적으로 많이 사용되는 <b>리스트, 튜플, 딕셔너리, 셋</b> 등은 built-in 형태여서 다른 모듈을 추가하지 않고도 사용 가능함\n",
+    "\n",
+    "\n",
+    "1. [리스트(List)](#1)\n",
+    "2. [튜플(Tuple)](#2)\n",
+    "3. [딕셔너리(Dictionary)](#3)\n",
+    " 1. [딕셔너리 생성](#3-1)\n",
+    " 2. [딕셔너리 키(Key)](#3-2)\n",
+    " 3. [딕셔너리 값](#3-3)\n",
+    "4. [셋(Set)](#4)\n",
+    " 1. [셋의 특징](#4-1)\n",
+    " 2. [셋으로 중복 제거하기](#4-2)\n",
+    " 3. [교집합, 합집합, 차집합 구하기](#4-3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "## 2. 리스트(List)<a name=\"2\"></a>\n",
+    "## 1. 리스트(List)<a name=\"1\"></a>\n",
     "- 리스트도 컬렉션 중에 하나이나, 사용빈도가 다른 것들에 비해 많아 다른 문서로 다룸\n",
     "- [리스트 기초](https://github.com/heekyjung/studypolio-python/blob/main/01_파이썬_문법_기초/02_리스트.ipynb)\n",
     "- [리스트 상세](https://github.com/heekyjung/studypolio-python/blob/main/04_파이썬_문법_심화/01_리스트_상세.ipynb)"
@@ -43,7 +36,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 3. 튜플(Tuple)<a name=\"3\"></a>\n",
+    "## 2. 튜플(Tuple)<a name=\"2\"></a>\n",
     "- 리스트와 매우 비슷한 형태\n",
     "\n",
     "||튜플|리스트|\n",
@@ -121,8 +114,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 4. 딕셔너리(Dictionary)<a name=\"4\"></a>\n",
-    "### A. 딕셔너리 생성<a name=\"4-1\"></a>\n",
+    "## 3. 딕셔너리(Dictionary)<a name=\"3\"></a>\n",
+    "### A. 딕셔너리 생성<a name=\"3-1\"></a>\n",
     "1. 직접 `{key1:value1, key2:value2 ... }` 형태로 딕셔너리를 생성\n",
     "2. 딕셔너리 constructor를 이용하여 생성"
    ]
@@ -183,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B. 딕셔너리 키(Key)<a name=\"4-2\"></a>\n",
+    "### B. 딕셔너리 키(Key)<a name=\"3-2\"></a>\n",
     "<b>`keys()`</b>: 해당 딕셔너리에 포함된 키(Key)들을 `dict_keys` 형태로 추출"
    ]
   },
@@ -279,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C. 딕셔너리 값<a name=\"4-3\"></a>\n",
+    "### C. 딕셔너리 값<a name=\"3-3\"></a>\n",
     "<b>`get()`</b>: 딕셔너리의 값을 가져옴"
    ]
   },
@@ -335,7 +328,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 5. 셋(Set)<a name=\"5\"></a>\n",
+    "## 4. 셋(Set)<a name=\"4\"></a>\n",
     "집합의 형태를 쉽게 처리하기 위한 데이터타입\n",
     "- 딕셔너리와 비슷하게 생겼으나 키(Key)가 없는 형태"
    ]
@@ -373,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A. 셋의 특징<a name=\"5-1\"></a>\n",
+    "### A. 셋의 특징<a name=\"4-1\"></a>\n",
     "#### 1. 중복을 허용하지 않는다.\n",
     "- 중복을 제거하는데 사용 가능"
    ]
@@ -414,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B. 셋으로 중복 제거하기: 셋(Set) feat. 형변환(Casting)<a name=\"5-2\"></a>"
+    "### B. 셋으로 중복 제거하기: 셋(Set) feat. 형변환(Casting)<a name=\"4-2\"></a>"
    ]
   },
   {
@@ -466,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C. 교집합, 합집합, 차집합 구하기<a name=\"5-3\"></a>"
+    "### C. 교집합, 합집합, 차집합 구하기<a name=\"4-3\"></a>"
    ]
   },
   {
